--- a/style.css
+++ b/style.css
@@ -96,6 +96,8 @@ nav {
   box-shadow: 0 1px 4px rgb(0 0 0 / 60%);
   filter: grayscale(0.2) brightness(1.05);
   transition: .3s;
+  opacity: .8;
+  
 }
 .section {
   width: calc(50% - 20px);
@@ -116,7 +118,24 @@ nav {
   padding: 0;
   list-style: none;
 }
-.pre {
+.pre code {
   padding: 0;
   margin: 0;
+  right: 0;
 }
+.code {
+  margin: 0 auto;
+  left: 25px;
+}
+.footer {
+  background-color: #829985;
+  padding: 20px;
+}
+.footer__container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 auto;
+  color: #fff;
+}
+
