--- a/style.css
+++ b/style.css
@@ -53,15 +53,32 @@ body {
   font-weight:400;
   line-height: 30px;
   color: #fff;
+  transition: 0.5s all linear;
 }
-.nav__item-link:hover {
-  text-decoration: underline;
-  transition: 0.8s;
+.nav__item-link:hover:before {
+  transform: scaleX(1);
+  transition: 0.5s all;
+
+}
+.nav__item-link::before {
+  content: '';
+  width: 100%;
+  height: 2px;
+  background:  #d7d1c9;
+  position: absolute;
+  left: 0;
+  bottom: -4px;
+  transform: scaleX(0);
+  transform-origin: left;
+}
+.nav__item-link:hover{
+  transform: scale(1);
+  transition: 0.5s;
   color: #4d2323;
-  text-transform: uppercase;
   text-shadow: red -2px 0,
                cyan 2px 0;
 }
+
 .header__nav {
   display: block;
 }
@@ -170,7 +187,7 @@ section .pre {
 .rss {
   width: 120px;
   height: 50px;
-  background-image: url(assets/svg/rss.svg);
+  background-image: url(./assets/svg/rss.svg);
   background-size: contain;
   background-repeat: no-repeat;
 }
